[tool.poetry]
name = "naming-convention"
version = "0.1.0"
description = ""
authors = ["charlesl46 <charles.lucas4665@gmail.com>"]
readme = "README.md"
packages = [{include = "naming_convention"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"

[tool.poetry.scripts]
pync = "naming_convention.parser:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
